--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -62,6 +62,26 @@ jenkins/plugins-201809060910.zip:
   size: 216192717
   object_id: 80e165bf-fdb5-42b1-61af-a44c0b67713f
   sha: 61b97db3d1a277bf799221b6f42bf1b5e414ebfd
+jenkins/plugins-201809122310.zip:
+  size: 241004253
+  object_id: 5dd572f7-70b3-4fd2-51d4-42830443bb9b
+  sha: 53ee0f8cddda39b00bca8cd1d410ffbcbc13e084
+jenkins/plugins-201809140939.zip:
+  size: 241303136
+  object_id: 4d15eb54-94d3-4542-4add-656324cc337c
+  sha: 41c5e206a626b433bf3bcafafa3d9c9ada352e2c
+jenkins/plugins-201809141112.zip:
+  size: 241303509
+  object_id: 16055422-4b2f-46a9-63b2-8133ef4d5502
+  sha: 6d016175fa879820a0b33aa335964f5dcbab79d5
+jenkins/plugins-201809141133.zip:
+  size: 246910361
+  object_id: 97903801-a356-4fcb-41f1-9efd8e667649
+  sha: 0bfac950d409faadadfcb3735fad9f55778fda2d
+jenkins/plugins-201809141219.zip:
+  size: 246928122
+  object_id: e6a5b0cd-c97d-4e00-72d3-2d11c2f106c1
+  sha: f975c3cb5df883fcf8935524b01d0db793253c60
 jenkins/swarm-client-3.6.jar:
   size: 1620623
   object_id: 7960ab0b-6580-41ce-5139-43ebd3b390fa
